--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ html {
 
    
   :root{
-     --font-size-body: 16px;
-     --font-size-margin: 12px;
+     --font-size-body: 18px;
+     --font-size-margin: 14px;
      --font-face:  Fira Code; /* Fira Code; Georgia; */
      --font-face-nonbody:  Fira Code; /* Fira Code; Georgia; */
      --heading-weight: 500;
-     --body-width: 40em;
-     --font-size-nav: 16px;
+     --body-width: 50em;
+     --font-size-nav: 18px;
      --bg-color: #f5f3ef;
      --nav-width: 0em;
      --toggle-indent: 1em;
@@ -138,8 +138,7 @@ html {
   }
 
 a:link {
-    text-decoration-line: underline #FF0000;
-    text-decoration-style: dashed;
+    text-decoration-line: underline #545555;
 }
 
 a:hover,a:focus {
