--- a/style.css
+++ b/style.css
@@ -219,8 +219,9 @@ article {
 }
 
 sidebar {
+  position: absolute;
   list-style-type: none;
-  margin: 0;
+  margin-left: 1em;
   padding: 0;
 }
 
