--- a/style.css
+++ b/style.css
@@ -219,10 +219,10 @@ article {
 }
 
 sidebar {
-  position: absolute;
   list-style-type: none;
-  margin-left: 1em;
-  padding: 0;
+  position: absolute;
+  top: 1em;
+  left: 1em;
 }
 
 /* DONT TOUCH ANYTHING IN THESE SELECTORS */
